@@ -180,6 +180,7 @@ import jakarta.validation.constraints.Max;
  * @author Nakul Mishra
  * @author Soby Chacko
  * @author Wang Zhiyang
+ * @author Borahm Lee
  */
 @SpringJUnitConfig
 @DirtiesContext
@@ -1081,7 +1082,7 @@ public class EnableKafkaIntegrationTests {
 		assertThat(this.seekOnIdleListener.latch3.await(10, TimeUnit.SECONDS)).isTrue();
 		this.registry.getListenerContainer("seekOnIdle").stop();
 		assertThat(this.seekOnIdleListener.latch4.await(10, TimeUnit.SECONDS)).isTrue();
-		assertThat(KafkaTestUtils.getPropertyValue(this.seekOnIdleListener, "callbacks", Map.class)).hasSize(0);
+		assertThat(KafkaTestUtils.getPropertyValue(this.seekOnIdleListener, "topicToCallbacks", Map.class)).hasSize(0);
 	}
 
 	@SuppressWarnings({"unchecked", "rawtypes"})
@@ -2523,11 +2524,10 @@ public class EnableKafkaIntegrationTests {
 				if (latch1.getCount() > 0) {
 					latch1.countDown();
 					if (latch1.getCount() == 0) {
-						ConsumerSeekCallback seekToComputeFn = getSeekCallbackFor(
+						List<ConsumerSeekCallback> seekToComputeFunctions = getSeekCallbacksFor(
 								new org.apache.kafka.common.TopicPartition("seekToComputeFn", 0));
-						assertThat(seekToComputeFn).isNotNull();
-						seekToComputeFn.
-								seek("seekToComputeFn", 0, current -> 0L);
+						assertThat(seekToComputeFunctions).isNotEmpty();
+						seekToComputeFunctions.forEach(callback -> callback.seek("seekToComputeFn", 0, current -> 0L));
 					}
 				}
 			}
@@ -2576,14 +2576,15 @@ public class EnableKafkaIntegrationTests {
 		}
 
 		public void rewindAllOneRecord() {
-			getSeekCallbacks()
-					.forEach((tp, callback) ->
-							callback.seekRelative(tp.topic(), tp.partition(), -1, true));
+			getTopicsAndCallbacks()
+					.forEach((tp, callbacks) ->
+							callbacks.forEach(callback -> callback.seekRelative(tp.topic(), tp.partition(), -1, true))
+					);
 		}
 
 		public void rewindOnePartitionOneRecord(String topic, int partition) {
-			getSeekCallbackFor(new org.apache.kafka.common.TopicPartition(topic, partition))
-					.seekRelative(topic, partition, -1, true);
+			getSeekCallbacksFor(new org.apache.kafka.common.TopicPartition(topic, partition))
+					.forEach(callback -> callback.seekRelative(topic, partition, -1, true));
 		}
 
 		@Override
