@@ -144,6 +144,7 @@ import org.springframework.util.backoff.FixedBackOff;
  * @author Soby Chacko
  * @author Wang Zhiyang
  * @author Mikael Carlstedt
+ * @author Borahm Lee
  */
 @EmbeddedKafka(topics = { KafkaMessageListenerContainerTests.topic1, KafkaMessageListenerContainerTests.topic2,
 		KafkaMessageListenerContainerTests.topic3, KafkaMessageListenerContainerTests.topic4,
@@ -2595,16 +2596,18 @@ public class KafkaMessageListenerContainerTests {
 			public void onMessage(ConsumerRecord<String, String> data) {
 				if (data.partition() == 0 && data.offset() == 0) {
 					TopicPartition topicPartition = new TopicPartition(data.topic(), data.partition());
-					final ConsumerSeekCallback seekCallbackFor = getSeekCallbackFor(topicPartition);
-					assertThat(seekCallbackFor).isNotNull();
-					seekCallbackFor.seekToBeginning(records.keySet());
-					Iterator<TopicPartition> iterator = records.keySet().iterator();
-					seekCallbackFor.seekToBeginning(Collections.singletonList(iterator.next()));
-					seekCallbackFor.seekToBeginning(Collections.singletonList(iterator.next()));
-					seekCallbackFor.seekToEnd(records.keySet());
-					iterator = records.keySet().iterator();
-					seekCallbackFor.seekToEnd(Collections.singletonList(iterator.next()));
-					seekCallbackFor.seekToEnd(Collections.singletonList(iterator.next()));
+					final List<ConsumerSeekCallback> seekCallbacksFor = getSeekCallbacksFor(topicPartition);
+					assertThat(seekCallbacksFor).isNotEmpty();
+					seekCallbacksFor.forEach(callback -> {
+						callback.seekToBeginning(records.keySet());
+						Iterator<TopicPartition> iterator = records.keySet().iterator();
+						callback.seekToBeginning(Collections.singletonList(iterator.next()));
+						callback.seekToBeginning(Collections.singletonList(iterator.next()));
+						callback.seekToEnd(records.keySet());
+						iterator = records.keySet().iterator();
+						callback.seekToEnd(Collections.singletonList(iterator.next()));
+						callback.seekToEnd(Collections.singletonList(iterator.next()));
+					});
 				}
 			}
 
